@@ -40,6 +40,7 @@ private:
 		bool mode_blacklist;
 		bool mode_whitelist;
 		bool mode_mute;
+		bool mode_close;
 		//We should be able to change values of all variables in union by assigning something to it's largest member (should be param_first/param_second)
 		//Don't expect bool (param_first/param_second type) to be the largest because size of bool is implementation defined 
 		//Test with static_assert for other types to be smaller or equal in size
@@ -82,6 +83,7 @@ private:
 	virtual bool ModeNegate() { return ctrl_vars.mode_negate; }
 	virtual bool ModeBlank() { return ctrl_vars.mode_blank||ctrl_vars.mode_blacklist||ctrl_vars.mode_whitelist; }
 	virtual bool ModeRecent() { return ctrl_vars.mode_recent; }
+	virtual bool ModeClose() { return ctrl_vars.mode_close; }
 	virtual bool ModeBlacklist() { return ctrl_vars.mode_blacklist&&!ctrl_vars.mode_whitelist; }
 	virtual bool ModeWhitelist() { return ctrl_vars.mode_whitelist&&!ctrl_vars.mode_blacklist; }
 public:
